updated script for testing the model, updated train.ipynb

--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -333,25 +333,30 @@
    },
    "outputs": [],
    "source": [
-    "def train(use_physics=False):\n",
+    "def train(use_physics=False, mse_weight=1.0, vgg_weight=0.1, physics_weight=0.1):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        use_physics (bool): Whether to enable divergence loss.\n",
+    "        mse_weight (float): Weight for Pixel Loss (MSE).\n",
+    "        vgg_weight (float): Weight for Perceptual Loss (VGG).\n",
+    "        physics_weight (float): Weight for Divergence Loss (if use_physics=True).\n",
+    "    \"\"\"\n",
     "    # 1. Data\n",
     "    dataset = FluidLoader(DATA_FILE, STATS_FILE)\n",
     "    train_sz = int(0.8 * len(dataset))\n",
     "    val_sz = len(dataset) - train_sz\n",
     "    train_ds, val_ds = random_split(dataset, [train_sz, val_sz], generator=torch.Generator().manual_seed(42))\n",
     "    \n",
-    "    # Num_workers=2 is usually safe on Kaggle\n",
     "    train_loader = DataLoader(train_ds, batch_size=BATCH_SIZE, shuffle=True, num_workers=2, pin_memory=True)\n",
     "    val_loader = DataLoader(val_ds, batch_size=BATCH_SIZE, shuffle=False, num_workers=2, pin_memory=True)\n",
     "\n",
     "    # 2. Setup\n",
     "    model = ResUNet(in_channels=6, out_channels=2).to(device)\n",
     "    optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
-    "    # FIXED: Added Scheduler\n",
     "    scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=5, verbose=True)\n",
-    "    # FIXED: Updated Scaler init\n",
     "    scaler = GradScaler('cuda') \n",
     "    \n",
+    "    # Loss Functions\n",
     "    mse_fn = nn.MSELoss()\n",
     "    vgg_fn = VGGLoss().to(device)\n",
     "    div_fn = DivergenceLoss().to(device)\n",
@@ -359,6 +364,7 @@
     "    \n",
     "    mode_name = \"PINN\" if use_physics else \"Baseline\"\n",
     "    print(f\"\\n🚀 Starting {mode_name} Training...\")\n",
+    "    print(f\"   > Weights: MSE={mse_weight} | VGG={vgg_weight} | Physics={physics_weight if use_physics else 0.0}\")\n",
     "    \n",
     "    hist = {'train': [], 'val': [], 'lr': []}\n",
     "    best_val_loss = float('inf')\n",
@@ -369,28 +375,33 @@
     "        model.train()\n",
     "        train_loss = 0.0\n",
     "        \n",
-    "        # FIXED: TQDM Progress Bar\n",
     "        loop = tqdm(train_loader, desc=f\"Epoch {epoch+1}/{EPOCHS}\", leave=False)\n",
     "        \n",
     "        for x, y in loop:\n",
     "            x, y = x.to(device), y.to(device)\n",
     "            \n",
-    "            optimizer.zero_grad(set_to_none=True) # set_to_none is slightly faster\n",
+    "            optimizer.zero_grad(set_to_none=True) \n",
     "            \n",
     "            with autocast('cuda'): \n",
     "                pred = model(x)\n",
     "                \n",
-    "                # Losses\n",
-    "                loss = mse_fn(pred, y)\n",
-    "                loss += VGG_WEIGHT * vgg_fn(pred, y)\n",
+    "                # --- Weighted Loss Calculation ---\n",
+    "                loss = 0.0\n",
     "                \n",
-    "                if use_physics:\n",
-    "                    # FIXED: Only Divergence\n",
-    "                    loss += PHYSICS_WEIGHT * div_fn(pred, K)\n",
+    "                # 1. MSE Loss (Pixel Accuracy)\n",
+    "                if mse_weight > 0:\n",
+    "                    loss += mse_weight * mse_fn(pred, y)\n",
+    "                \n",
+    "                # 2. VGG Loss (Texture/Sharpness)\n",
+    "                if vgg_weight > 0:\n",
+    "                    loss += vgg_weight * vgg_fn(pred, y)\n",
+    "                \n",
+    "                # 3. Physics Loss (Divergence/Mass)\n",
+    "                if use_physics and physics_weight > 0:\n",
+    "                    loss += physics_weight * div_fn(pred, K)\n",
     "            \n",
     "            scaler.scale(loss).backward()\n",
     "            \n",
-    "            # FIXED: Gradient Clipping (Unscale before clipping)\n",
     "            scaler.unscale_(optimizer)\n",
     "            torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
     "            \n",
@@ -408,6 +419,7 @@
     "                x, y = x.to(device), y.to(device)\n",
     "                with autocast('cuda'):\n",
     "                    pred = model(x)\n",
+    "                    # Track MSE for early stopping (standard metric)\n",
     "                    val_loss += mse_fn(pred, y).item()\n",
     "        \n",
     "        avg_train = train_loss / len(train_loader)\n",
@@ -423,7 +435,7 @@
     "        \n",
     "        print(f\"Epoch {epoch+1} | Train: {avg_train:.6f} | Val: {avg_val:.6f} | LR: {current_lr:.2e}\")\n",
     "        \n",
-    "        # FIXED: Better Checkpointing\n",
+    "        # Checkpointing\n",
     "        checkpoint = {\n",
     "            'epoch': epoch,\n",
     "            'model_state_dict': model.state_dict(),\n",
@@ -442,13 +454,13 @@
     "                print(\"🛑 Early Stopping triggered.\")\n",
     "                break\n",
     "                \n",
-    "    # FIXED: Plotting improvements\n",
+    "    # Plotting\n",
     "    plt.figure(figsize=(12, 5))\n",
     "    plt.subplot(1, 2, 1)\n",
     "    plt.plot(hist['train'], label='Train')\n",
     "    plt.plot(hist['val'], label='Val')\n",
     "    plt.title(f'{mode_name} Loss')\n",
-    "    plt.yscale('log') # Log scale is often better for loss\n",
+    "    plt.yscale('log')\n",
     "    plt.grid(True, alpha=0.3)\n",
     "    plt.legend()\n",
     "    \n",
@@ -460,7 +472,6 @@
     "    plt.savefig(f\"{OUTPUT_DIR}/{mode_name}_history.png\")\n",
     "    plt.show()\n",
     "    \n",
-    "    # Reload best model for return\n",
     "    best_checkpoint = torch.load(f\"{OUTPUT_DIR}/{mode_name}_best.pth\")\n",
     "    model.load_state_dict(best_checkpoint['model_state_dict'])\n",
     "    \n",
@@ -490,13 +501,21 @@
    },
    "outputs": [],
    "source": [
-    "# --- Run Baseline Training ---\n",
-    "# 1. Train the model (Physics is OFF for baseline)\n",
-    "model, dataset = train(use_physics=False)\n",
+    "# Configuration 1: Standard (Balanced)\n",
+    "model, ds = train(\n",
+    "    use_physics=True, \n",
+    "    mse_weight=1.0, \n",
+    "    vgg_weight=0.1, \n",
+    "    physics_weight=0.1\n",
+    ")\n",
     "\n",
-    "# --- (Optional) Run Physics-Informed Training ---\n",
-    "# Uncomment the line below to train with Physics Loss enabled\n",
-    "# model_pinn, dataset = train(use_physics=True)"
+    "# Configuration 2: High Sharpness (Native Data Fine-Tuning)\n",
+    "# model, ds = train(\n",
+    "#     use_physics=True, \n",
+    "#     mse_weight=0.05,   # Low MSE to allow spatial shift\n",
+    "#     vgg_weight=1.0,    # High VGG for texture\n",
+    "#     physics_weight=0.2 # Physics to keep it valid\n",
+    "# )"
    ]
   }
  ],
