navier stokes implementation

--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -33,10 +33,9 @@
     "import torch.optim as optim\n",
     "import torchvision.models as models\n",
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
-    "# FIXED: Updated AMP imports\n",
     "from torch.amp import autocast, GradScaler \n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
-    "from tqdm.auto import tqdm  # FIXED: Progress bar\n",
+    "from tqdm.auto import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Set seeds\n",
@@ -47,8 +46,6 @@
     "BATCH_SIZE = 4\n",
     "LEARNING_RATE = 1e-4\n",
     "EPOCHS = 100\n",
-    "PHYSICS_WEIGHT = 0.1\n",
-    "VGG_WEIGHT = 0.1\n",
     "OUTPUT_DIR = \"/kaggle/working\"\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -58,10 +55,10 @@
     "search_path = \"/kaggle/input/**/*.pt\"\n",
     "pt_files = glob.glob(search_path, recursive=True)\n",
     "if not pt_files:\n",
-    "    raise FileNotFoundError(\"❌ Dataset not found!\")\n",
+    "    raise FileNotFoundError(\"❌ Dataset not found! Make sure to upload the processed .pt file.\")\n",
     "DATA_FILE = pt_files[0]\n",
     "DATA_DIR = os.path.dirname(DATA_FILE)\n",
-    "STATS_FILE = os.path.join(DATA_DIR, \"normalization_stats.json\")"
+    "print(f\"📂 Dataset found at: {DATA_FILE}\")"
    ]
   },
   {
@@ -88,51 +85,35 @@
    "outputs": [],
    "source": [
     "class FluidLoader(Dataset):\n",
-    "    def __init__(self, pt_file, stats_file, target_res=256):\n",
+    "    def __init__(self, pt_file):\n",
     "        print(f\"⏳ Loading data map...\")\n",
     "        try:\n",
+    "            # mmap=True is crucial for Kaggle RAM limits\n",
     "            data = torch.load(pt_file, map_location='cpu', mmap=True)\n",
     "        except:\n",
+    "            print(\"⚠️ mmap failed. Loading to RAM.\")\n",
     "            data = torch.load(pt_file, map_location='cpu')\n",
     "            \n",
     "        self.inputs = data['inputs']\n",
     "        self.targets = data['targets']\n",
-    "        self.target_res = target_res\n",
     "        \n",
-    "        # FIXED: Check resolution once at startup\n",
-    "        # We check the first sample to determine if upscaling is needed\n",
-    "        sample_h = self.inputs.shape[-1]\n",
-    "        self.needs_upscale = (sample_h != target_res)\n",
-    "        \n",
-    "        # Load K\n",
-    "        if 'K' in data:\n",
-    "            self.K = float(data['K'])\n",
-    "        elif os.path.exists(stats_file):\n",
-    "            with open(stats_file, 'r') as f:\n",
-    "                stats = json.load(f)\n",
-    "            self.K = float(stats['scaling_factor'])\n",
-    "        else:\n",
-    "            self.K = 1.0\n",
+    "        # Load all normalization constants\n",
+    "        # Fallback to 1.0 if not found (legacy support)\n",
+    "        self.K_vel = float(data.get('K_vel', 1.0))\n",
+    "        self.K_pres = float(data.get('K_pres', 1.0))\n",
+    "        self.K_smoke = float(data.get('K_smoke', 1.0))\n",
     "            \n",
-    "        print(f\"✅ Loaded {len(self.inputs)} samples. Upscaling: {self.needs_upscale}\")\n",
+    "        print(f\"✅ Loaded {len(self.inputs)} samples.\")\n",
+    "        print(f\"   K_vel: {self.K_vel} | K_pres: {self.K_pres} | K_smoke: {self.K_smoke}\")\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.inputs)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        # FIXED: Removed .clone() (F.interpolate creates a new tensor anyway)\n",
-    "        lr = self.inputs[idx] \n",
-    "        hr = self.targets[idx]\n",
-    "        \n",
-    "        # FIXED: Use pre-calculated flag instead of checking shape every time\n",
-    "        if self.needs_upscale:\n",
-    "            lr = F.interpolate(\n",
-    "                lr.unsqueeze(0), \n",
-    "                size=(self.target_res, self.target_res), \n",
-    "                mode='bilinear', \n",
-    "                align_corners=False\n",
-    "            ).squeeze(0)\n",
-    "            \n",
+    "        # Data is already processed (Normalized & Upscaled) in the .pt file\n",
+    "        # We just convert to float32 for training\n",
+    "        lr = self.inputs[idx].float()\n",
+    "        hr = self.targets[idx].float()\n",
     "        return lr, hr"
    ]
   },
@@ -183,7 +164,7 @@
     "        return out\n",
     "\n",
     "class ResUNet(nn.Module):\n",
-    "    def __init__(self, in_channels=6, out_channels=2, features=[64, 128, 256, 512]):\n",
+    "    def __init__(self, in_channels=4, out_channels=4, features=[64, 128, 256, 512]):\n",
     "        super(ResUNet, self).__init__()\n",
     "        self.encoder = nn.ModuleList()\n",
     "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
@@ -234,7 +215,6 @@
     "            out = self.decoder[idx](concat_skip)\n",
     "            \n",
     "        out = self.final_conv(out)\n",
-    "        \n",
     "        return out"
    ]
   },
@@ -260,55 +240,70 @@
    },
    "outputs": [],
    "source": [
-    "class VGGLoss(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(VGGLoss, self).__init__()\n",
-    "        vgg = models.vgg19(weights=models.VGG19_Weights.DEFAULT)\n",
-    "        self.feature_extractor = nn.Sequential(*list(vgg.features.children())[:35]).eval()\n",
-    "        \n",
-    "        for param in self.feature_extractor.parameters():\n",
-    "            param.requires_grad = False\n",
-    "            \n",
-    "        # FIXED: ImageNet Normalization constants as buffers\n",
-    "        self.register_buffer(\"mean\", torch.tensor([0.485, 0.456, 0.406]).view(1, 3, 1, 1))\n",
-    "        self.register_buffer(\"std\", torch.tensor([0.229, 0.224, 0.225]).view(1, 3, 1, 1))\n",
-    "\n",
-    "    def forward(self, input, target):\n",
-    "        # 1. Expand 2 channel -> 3 channel (Append Zero channel)\n",
-    "        # Using pad is more efficient than creating zeros and catting\n",
-    "        # Pad format: (left, right, top, bottom, front, back) for last 3 dims? \n",
-    "        # F.pad for 4D input (B, C, H, W) pads starting from last dim.\n",
-    "        # We want to pad Channel dim. F.pad tuple is (W_l, W_r, H_t, H_b, C_f, C_b)?? No.\n",
-    "        # Simple concat is safer for clarity, but lets optimize allocation.\n",
-    "        \n",
-    "        b, c, h, w = input.shape\n",
-    "        # Create zero channel ONCE per batch if size constant? \n",
-    "        # Just stick to cat for safety but ensure device match.\n",
-    "        zeros = torch.zeros(b, 1, h, w, device=input.device, dtype=input.dtype)\n",
-    "        \n",
-    "        input_3c = torch.cat([input, zeros], dim=1)\n",
-    "        target_3c = torch.cat([target, zeros], dim=1)\n",
-    "        \n",
-    "        # 2. FIXED: Normalize to ImageNet stats\n",
-    "        # VGG expects [0, 1] usually, but our data is normalized by K.\n",
-    "        # We assume input is roughly in reasonable range, but centering helps.\n",
-    "        input_norm = (input_3c - self.mean) / self.std\n",
-    "        target_norm = (target_3c - self.mean) / self.std\n",
-    "        \n",
-    "        input_features = self.feature_extractor(input_norm)\n",
-    "        target_features = self.feature_extractor(target_norm)\n",
-    "        return F.mse_loss(input_features, target_features)\n",
-    "\n",
     "class DivergenceLoss(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(DivergenceLoss, self).__init__()\n",
     "\n",
-    "    def forward(self, output, scaling_factor):\n",
-    "        u = output[:, 0, :, :] * scaling_factor\n",
-    "        v = output[:, 1, :, :] * scaling_factor\n",
+    "    def forward(self, output, K_vel):\n",
+    "        # Extract Velocity Channels (0, 1)\n",
+    "        u = output[:, 0, :, :] * K_vel\n",
+    "        v = output[:, 1, :, :] * K_vel\n",
+    "        \n",
+    "        # Calculate Divergence: du/dx + dv/dy\n",
     "        du_dx = u[:, :, 1:] - u[:, :, :-1]\n",
     "        dv_dy = v[:, 1:, :] - v[:, :-1, :]\n",
-    "        return torch.mean((du_dx[:, :-1, :] + dv_dy[:, :, :-1])**2)"
+    "        \n",
+    "        # Crop to align dimensions\n",
+    "        return torch.mean((du_dx[:, :-1, :] + dv_dy[:, :, :-1])**2)\n",
+    "\n",
+    "class PressurePoissonLoss(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(PressurePoissonLoss, self).__init__()\n",
+    "        # Laplacian kernel\n",
+    "        self.register_buffer('laplacian', torch.tensor([[[[0, 1, 0], [1, -4, 1], [0, 1, 0]]]], dtype=torch.float32))\n",
+    "        # Sobel kernels for gradients\n",
+    "        self.register_buffer('k_x', torch.tensor([[[[-1, 0, 1], [-2, 0, 2], [-1, 0, 1]]]], dtype=torch.float32) / 8.0)\n",
+    "        self.register_buffer('k_y', torch.tensor([[[[-1, -2, -1], [0, 0, 0], [1, 2, 1]]]], dtype=torch.float32) / 8.0)\n",
+    "\n",
+    "    def get_grads(self, f):\n",
+    "        return F.conv2d(f, self.k_x, padding=1), F.conv2d(f, self.k_y, padding=1)\n",
+    "\n",
+    "    def get_laplacian(self, f):\n",
+    "        return F.conv2d(f, self.laplacian, padding=1)\n",
+    "\n",
+    "    def get_divergence(self, fx, fy):\n",
+    "        dfx_dx, _ = self.get_grads(fx)\n",
+    "        _, dfy_dy = self.get_grads(fy)\n",
+    "        return dfx_dx + dfy_dy\n",
+    "\n",
+    "    def forward(self, pred, K_vel, K_pres, K_smoke):\n",
+    "        # Unpack and Un-normalize\n",
+    "        u = pred[:, 0:1, :, :] * K_vel\n",
+    "        v = pred[:, 1:2, :, :] * K_vel\n",
+    "        p = pred[:, 2:3, :, :] * K_pres\n",
+    "        s = pred[:, 3:4, :, :] * K_smoke\n",
+    "\n",
+    "        # 1. LHS: Laplacian of Pressure\n",
+    "        lhs = self.get_laplacian(p)\n",
+    "\n",
+    "        # 2. RHS Term A: Divergence of Convection -(u.grad)u\n",
+    "        du_dx, du_dy = self.get_grads(u)\n",
+    "        dv_dx, dv_dy = self.get_grads(v)\n",
+    "        \n",
+    "        # Convection vector components\n",
+    "        conv_u = u * du_dx + v * du_dy \n",
+    "        conv_v = u * dv_dx + v * dv_dy \n",
+    "        div_convection = self.get_divergence(conv_u, conv_v)\n",
+    "\n",
+    "        # 3. RHS Term B: Divergence of Buoyancy Force\n",
+    "        # Force ~ (0, s * 0.3)\n",
+    "        force_y = s * 0.3 \n",
+    "        div_force = self.get_divergence(torch.zeros_like(s), force_y)\n",
+    "\n",
+    "        # Poisson Equation: Del^2 P = -Div(Conv) + Div(Force)\n",
+    "        rhs = -div_convection + div_force\n",
+    "\n",
+    "        return F.mse_loss(lhs, rhs)"
    ]
   },
   {
@@ -333,16 +328,16 @@
    },
    "outputs": [],
    "source": [
-    "def train(use_physics=False, mse_weight=1.0, vgg_weight=0.1, physics_weight=0.1):\n",
+    "def train(use_physics=False, mse_weight=1.0, divergence_weight=0.1, ppe_weight=0.1):\n",
     "    \"\"\"\n",
     "    Args:\n",
-    "        use_physics (bool): Whether to enable divergence loss.\n",
+    "        use_physics (bool): Whether to enable Divergence and PPE losses.\n",
     "        mse_weight (float): Weight for Pixel Loss (MSE).\n",
-    "        vgg_weight (float): Weight for Perceptual Loss (VGG).\n",
-    "        physics_weight (float): Weight for Divergence Loss (if use_physics=True).\n",
+    "        divergence_weight (float): Weight for Divergence Loss (Mass Conservation).\n",
+    "        ppe_weight (float): Weight for Pressure Poisson Loss (Navier-Stokes).\n",
     "    \"\"\"\n",
     "    # 1. Data\n",
-    "    dataset = FluidLoader(DATA_FILE, STATS_FILE)\n",
+    "    dataset = FluidLoader(DATA_FILE)\n",
     "    train_sz = int(0.8 * len(dataset))\n",
     "    val_sz = len(dataset) - train_sz\n",
     "    train_ds, val_ds = random_split(dataset, [train_sz, val_sz], generator=torch.Generator().manual_seed(42))\n",
@@ -350,21 +345,25 @@
     "    train_loader = DataLoader(train_ds, batch_size=BATCH_SIZE, shuffle=True, num_workers=2, pin_memory=True)\n",
     "    val_loader = DataLoader(val_ds, batch_size=BATCH_SIZE, shuffle=False, num_workers=2, pin_memory=True)\n",
     "\n",
-    "    # 2. Setup\n",
-    "    model = ResUNet(in_channels=6, out_channels=2).to(device)\n",
+    "    # 2. Setup (4 Inputs -> 4 Outputs)\n",
+    "    model = ResUNet(in_channels=4, out_channels=4).to(device)\n",
     "    optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "    scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=5, verbose=True)\n",
     "    scaler = GradScaler('cuda') \n",
     "    \n",
     "    # Loss Functions\n",
     "    mse_fn = nn.MSELoss()\n",
-    "    vgg_fn = VGGLoss().to(device)\n",
     "    div_fn = DivergenceLoss().to(device)\n",
-    "    K = dataset.K\n",
+    "    ppe_fn = PressurePoissonLoss().to(device)\n",
     "    \n",
-    "    mode_name = \"PINN\" if use_physics else \"Baseline\"\n",
+    "    # Normalization Constants\n",
+    "    K_vel = dataset.K_vel\n",
+    "    K_pres = dataset.K_pres\n",
+    "    K_smoke = dataset.K_smoke\n",
+    "    \n",
+    "    mode_name = \"PINN_NS\" if use_physics else \"Baseline\"\n",
     "    print(f\"\\n🚀 Starting {mode_name} Training...\")\n",
-    "    print(f\"   > Weights: MSE={mse_weight} | VGG={vgg_weight} | Physics={physics_weight if use_physics else 0.0}\")\n",
+    "    print(f\"   > Weights: MSE={mse_weight} | Div={divergence_weight} | PPE={ppe_weight}\")\n",
     "    \n",
     "    hist = {'train': [], 'val': [], 'lr': []}\n",
     "    best_val_loss = float('inf')\n",
@@ -392,19 +391,19 @@
     "                if mse_weight > 0:\n",
     "                    loss += mse_weight * mse_fn(pred, y)\n",
     "                \n",
-    "                # 2. VGG Loss (Texture/Sharpness)\n",
-    "                if vgg_weight > 0:\n",
-    "                    loss += vgg_weight * vgg_fn(pred, y)\n",
-    "                \n",
-    "                # 3. Physics Loss (Divergence/Mass)\n",
-    "                if use_physics and physics_weight > 0:\n",
-    "                    loss += physics_weight * div_fn(pred, K)\n",
+    "                # 2. Physics Losses\n",
+    "                if use_physics:\n",
+    "                    # Divergence (Mass)\n",
+    "                    if divergence_weight > 0:\n",
+    "                        loss += divergence_weight * div_fn(pred, K_vel)\n",
+    "                    \n",
+    "                    # Navier-Stokes (Momentum via Pressure)\n",
+    "                    if ppe_weight > 0:\n",
+    "                        loss += ppe_weight * ppe_fn(pred, K_vel, K_pres, K_smoke)\n",
     "            \n",
     "            scaler.scale(loss).backward()\n",
-    "            \n",
     "            scaler.unscale_(optimizer)\n",
     "            torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
-    "            \n",
     "            scaler.step(optimizer)\n",
     "            scaler.update()\n",
     "            \n",
@@ -419,13 +418,12 @@
     "                x, y = x.to(device), y.to(device)\n",
     "                with autocast('cuda'):\n",
     "                    pred = model(x)\n",
-    "                    # Track MSE for early stopping (standard metric)\n",
+    "                    # Track MSE for early stopping\n",
     "                    val_loss += mse_fn(pred, y).item()\n",
     "        \n",
     "        avg_train = train_loss / len(train_loader)\n",
     "        avg_val = val_loss / len(val_loader)\n",
     "        \n",
-    "        # Step Scheduler\n",
     "        scheduler.step(avg_val)\n",
     "        current_lr = optimizer.param_groups[0]['lr']\n",
     "        \n",
@@ -435,7 +433,6 @@
     "        \n",
     "        print(f\"Epoch {epoch+1} | Train: {avg_train:.6f} | Val: {avg_val:.6f} | LR: {current_lr:.2e}\")\n",
     "        \n",
-    "        # Checkpointing\n",
     "        checkpoint = {\n",
     "            'epoch': epoch,\n",
     "            'model_state_dict': model.state_dict(),\n",
@@ -501,21 +498,13 @@
    },
    "outputs": [],
    "source": [
-    "# Configuration 1: Standard (Balanced)\n",
+    "# Train with Navier-Stokes physics\n",
     "model, ds = train(\n",
     "    use_physics=True, \n",
     "    mse_weight=1.0, \n",
-    "    vgg_weight=0.1, \n",
-    "    physics_weight=0.1\n",
-    ")\n",
-    "\n",
-    "# Configuration 2: High Sharpness (Native Data Fine-Tuning)\n",
-    "# model, ds = train(\n",
-    "#     use_physics=True, \n",
-    "#     mse_weight=0.05,   # Low MSE to allow spatial shift\n",
-    "#     vgg_weight=1.0,    # High VGG for texture\n",
-    "#     physics_weight=0.2 # Physics to keep it valid\n",
-    "# )"
+    "    divergence_weight=0.1, \n",
+    "    ppe_weight=0.1\n",
+    ")"
    ]
   }
  ],
