needed some inference results, fixed code data_test.py

--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -498,6 +498,326 @@
     "# Uncomment the line below to train with Physics Loss enabled\n",
     "# model_pinn, dataset = train(use_physics=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Physics-Based Metrics\n",
+    "Evaluate the model's adherence to fluid dynamics principles: divergence-free flow, vorticity preservation, and kinetic energy conservation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_divergence(flow, K):\n",
+    "    \"\"\"\n",
+    "    Compute divergence: ∇·v = ∂u/∂x + ∂v/∂y\n",
+    "    Args:\n",
+    "        flow: (B, 2, H, W) velocity field\n",
+    "        K: scaling factor\n",
+    "    Returns:\n",
+    "        divergence field (B, H-1, W-1)\n",
+    "    \"\"\"\n",
+    "    u = flow[:, 0, :, :] * K\n",
+    "    v = flow[:, 1, :, :] * K\n",
+    "    \n",
+    "    # Finite differences\n",
+    "    du_dx = u[:, :, 1:] - u[:, :, :-1]\n",
+    "    dv_dy = v[:, 1:, :] - v[:, :-1, :]\n",
+    "    \n",
+    "    div = du_dx[:, :-1, :] + dv_dy[:, :, :-1]\n",
+    "    return div\n",
+    "\n",
+    "def compute_vorticity(flow, K):\n",
+    "    \"\"\"\n",
+    "    Compute vorticity (curl): ω = ∂v/∂x - ∂u/∂y\n",
+    "    Args:\n",
+    "        flow: (B, 2, H, W) velocity field\n",
+    "        K: scaling factor\n",
+    "    Returns:\n",
+    "        vorticity field (B, H-1, W-1)\n",
+    "    \"\"\"\n",
+    "    u = flow[:, 0, :, :] * K\n",
+    "    v = flow[:, 1, :, :] * K\n",
+    "    \n",
+    "    # Finite differences\n",
+    "    dv_dx = v[:, :, 1:] - v[:, :, :-1]\n",
+    "    du_dy = u[:, 1:, :] - u[:, :-1, :]\n",
+    "    \n",
+    "    curl = dv_dx[:, :-1, :] - du_dy[:, :, :-1]\n",
+    "    return curl\n",
+    "\n",
+    "def compute_kinetic_energy(flow, K):\n",
+    "    \"\"\"\n",
+    "    Compute kinetic energy: KE = 0.5 * (u² + v²)\n",
+    "    Args:\n",
+    "        flow: (B, 2, H, W) velocity field\n",
+    "        K: scaling factor\n",
+    "    Returns:\n",
+    "        total kinetic energy per sample (B,)\n",
+    "    \"\"\"\n",
+    "    u = flow[:, 0, :, :] * K\n",
+    "    v = flow[:, 1, :, :] * K\n",
+    "    \n",
+    "    ke = 0.5 * (u**2 + v**2)\n",
+    "    # Sum over spatial dimensions\n",
+    "    return ke.sum(dim=(1, 2))\n",
+    "\n",
+    "def compute_physics_metrics(pred, target, K):\n",
+    "    \"\"\"\n",
+    "    Compute all physics-based metrics\n",
+    "    Returns dict with divergence error, vorticity error, and KE error\n",
+    "    \"\"\"\n",
+    "    # Divergence\n",
+    "    div_pred = compute_divergence(pred, K)\n",
+    "    div_target = compute_divergence(target, K)\n",
+    "    div_mae = torch.abs(div_pred - div_target).mean().item()\n",
+    "    div_mse = ((div_pred - div_target)**2).mean().item()\n",
+    "    \n",
+    "    # Vorticity\n",
+    "    vort_pred = compute_vorticity(pred, K)\n",
+    "    vort_target = compute_vorticity(target, K)\n",
+    "    vort_mae = torch.abs(vort_pred - vort_target).mean().item()\n",
+    "    vort_mse = ((vort_pred - vort_target)**2).mean().item()\n",
+    "    \n",
+    "    # Kinetic Energy\n",
+    "    ke_pred = compute_kinetic_energy(pred, K)\n",
+    "    ke_target = compute_kinetic_energy(target, K)\n",
+    "    ke_rel_error = (torch.abs(ke_pred - ke_target) / (ke_target + 1e-8)).mean().item()\n",
+    "    \n",
+    "    return {\n",
+    "        'divergence_mae': div_mae,\n",
+    "        'divergence_mse': div_mse,\n",
+    "        'vorticity_mae': vort_mae,\n",
+    "        'vorticity_mse': vort_mse,\n",
+    "        'kinetic_energy_rel_error': ke_rel_error\n",
+    "    }\n",
+    "\n",
+    "print(\"✅ Physics metrics functions defined\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_physics_metrics(model, dataset, num_samples=None):\n",
+    "    \"\"\"\n",
+    "    Evaluate physics-based metrics on the dataset\n",
+    "    Args:\n",
+    "        model: trained model\n",
+    "        dataset: FluidLoader dataset\n",
+    "        num_samples: number of samples to evaluate (None = all)\n",
+    "    \"\"\"\n",
+    "    model.eval()\n",
+    "    K = dataset.K\n",
+    "    \n",
+    "    if num_samples is None:\n",
+    "        num_samples = len(dataset)\n",
+    "    \n",
+    "    all_metrics = {\n",
+    "        'divergence_mae': [],\n",
+    "        'divergence_mse': [],\n",
+    "        'vorticity_mae': [],\n",
+    "        'vorticity_mse': [],\n",
+    "        'kinetic_energy_rel_error': []\n",
+    "    }\n",
+    "    \n",
+    "    print(f\"📊 Evaluating physics metrics on {num_samples} samples...\")\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for i in tqdm(range(num_samples)):\n",
+    "            lr, hr = dataset[i]\n",
+    "            lr = lr.unsqueeze(0).to(device)\n",
+    "            hr = hr.unsqueeze(0).to(device)\n",
+    "            \n",
+    "            with autocast('cuda'):\n",
+    "                pred = model(lr)\n",
+    "            \n",
+    "            metrics = compute_physics_metrics(pred, hr, K)\n",
+    "            \n",
+    "            for key in all_metrics:\n",
+    "                all_metrics[key].append(metrics[key])\n",
+    "    \n",
+    "    # Compute statistics\n",
+    "    results = {}\n",
+    "    for key, values in all_metrics.items():\n",
+    "        results[key] = {\n",
+    "            'mean': np.mean(values),\n",
+    "            'std': np.std(values),\n",
+    "            'min': np.min(values),\n",
+    "            'max': np.max(values)\n",
+    "        }\n",
+    "    \n",
+    "    # Print results\n",
+    "    print(\"\\n\" + \"=\"*60)\n",
+    "    print(\"📈 PHYSICS-BASED METRICS RESULTS\")\n",
+    "    print(\"=\"*60)\n",
+    "    \n",
+    "    print(f\"\\n🌀 DIVERGENCE (should be ~0 for incompressible flow):\")\n",
+    "    print(f\"   MAE: {results['divergence_mae']['mean']:.6f} ± {results['divergence_mae']['std']:.6f}\")\n",
+    "    print(f\"   MSE: {results['divergence_mse']['mean']:.6f} ± {results['divergence_mse']['std']:.6f}\")\n",
+    "    \n",
+    "    print(f\"\\n🌊 VORTICITY (rotation preservation):\")\n",
+    "    print(f\"   MAE: {results['vorticity_mae']['mean']:.6f} ± {results['vorticity_mae']['std']:.6f}\")\n",
+    "    print(f\"   MSE: {results['vorticity_mse']['mean']:.6f} ± {results['vorticity_mse']['std']:.6f}\")\n",
+    "    \n",
+    "    print(f\"\\n⚡ KINETIC ENERGY (conservation):\")\n",
+    "    print(f\"   Rel Error: {results['kinetic_energy_rel_error']['mean']:.6f} ± {results['kinetic_energy_rel_error']['std']:.6f}\")\n",
+    "    print(f\"   ({results['kinetic_energy_rel_error']['mean']*100:.2f}% error)\")\n",
+    "    \n",
+    "    print(\"=\"*60 + \"\\n\")\n",
+    "    \n",
+    "    return results, all_metrics\n",
+    "\n",
+    "# Run evaluation on validation set (or subset for speed)\n",
+    "physics_results, physics_data = evaluate_physics_metrics(model, dataset, num_samples=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize Physics Metrics Distribution\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(15, 8))\n",
+    "fig.suptitle('Physics-Based Metrics Distribution', fontsize=16, fontweight='bold')\n",
+    "\n",
+    "metrics_to_plot = [\n",
+    "    ('divergence_mae', 'Divergence MAE', '🌀'),\n",
+    "    ('divergence_mse', 'Divergence MSE', '🌀'),\n",
+    "    ('vorticity_mae', 'Vorticity MAE', '🌊'),\n",
+    "    ('vorticity_mse', 'Vorticity MSE', '🌊'),\n",
+    "    ('kinetic_energy_rel_error', 'KE Relative Error', '⚡'),\n",
+    "]\n",
+    "\n",
+    "for idx, (key, title, emoji) in enumerate(metrics_to_plot):\n",
+    "    ax = axes[idx // 3, idx % 3]\n",
+    "    \n",
+    "    data = physics_data[key]\n",
+    "    ax.hist(data, bins=30, alpha=0.7, color='steelblue', edgecolor='black')\n",
+    "    ax.axvline(physics_results[key]['mean'], color='red', linestyle='--', \n",
+    "               linewidth=2, label=f\"Mean: {physics_results[key]['mean']:.6f}\")\n",
+    "    ax.set_xlabel('Value', fontsize=10)\n",
+    "    ax.set_ylabel('Frequency', fontsize=10)\n",
+    "    ax.set_title(f\"{emoji} {title}\", fontsize=12, fontweight='bold')\n",
+    "    ax.legend()\n",
+    "    ax.grid(True, alpha=0.3)\n",
+    "\n",
+    "# Remove the 6th subplot (empty)\n",
+    "fig.delaxes(axes[1, 2])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f\"{OUTPUT_DIR}/physics_metrics_distribution.png\", dpi=150)\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"✅ Physics metrics visualization saved!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize Sample Flow Field with Physics Analysis\n",
+    "def visualize_flow_physics(model, dataset, sample_idx=0):\n",
+    "    \"\"\"\n",
+    "    Visualize a sample with its divergence and vorticity fields\n",
+    "    \"\"\"\n",
+    "    model.eval()\n",
+    "    K = dataset.K\n",
+    "    \n",
+    "    lr, hr = dataset[sample_idx]\n",
+    "    lr = lr.unsqueeze(0).to(device)\n",
+    "    hr = hr.unsqueeze(0).to(device)\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        with autocast('cuda'):\n",
+    "            pred = model(lr)\n",
+    "    \n",
+    "    # Move to CPU and convert to numpy\n",
+    "    pred_np = pred.cpu().numpy()[0]\n",
+    "    hr_np = hr.cpu().numpy()[0]\n",
+    "    \n",
+    "    # Compute physics quantities\n",
+    "    div_pred = compute_divergence(pred, K).cpu().numpy()[0]\n",
+    "    div_hr = compute_divergence(hr, K).cpu().numpy()[0]\n",
+    "    vort_pred = compute_vorticity(pred, K).cpu().numpy()[0]\n",
+    "    vort_hr = compute_vorticity(hr, K).cpu().numpy()[0]\n",
+    "    \n",
+    "    # Create visualization\n",
+    "    fig, axes = plt.subplots(3, 3, figsize=(15, 15))\n",
+    "    \n",
+    "    # Row 1: Velocity magnitude\n",
+    "    pred_mag = np.sqrt(pred_np[0]**2 + pred_np[1]**2)\n",
+    "    hr_mag = np.sqrt(hr_np[0]**2 + hr_np[1]**2)\n",
+    "    error_mag = np.abs(pred_mag - hr_mag)\n",
+    "    \n",
+    "    im0 = axes[0, 0].imshow(pred_mag, cmap='viridis')\n",
+    "    axes[0, 0].set_title('Predicted Velocity Mag', fontweight='bold')\n",
+    "    plt.colorbar(im0, ax=axes[0, 0])\n",
+    "    \n",
+    "    im1 = axes[0, 1].imshow(hr_mag, cmap='viridis')\n",
+    "    axes[0, 1].set_title('Ground Truth Velocity Mag', fontweight='bold')\n",
+    "    plt.colorbar(im1, ax=axes[0, 1])\n",
+    "    \n",
+    "    im2 = axes[0, 2].imshow(error_mag, cmap='Reds')\n",
+    "    axes[0, 2].set_title('Velocity Error', fontweight='bold')\n",
+    "    plt.colorbar(im2, ax=axes[0, 2])\n",
+    "    \n",
+    "    # Row 2: Divergence\n",
+    "    vmin_div = min(div_pred.min(), div_hr.min())\n",
+    "    vmax_div = max(div_pred.max(), div_hr.max())\n",
+    "    \n",
+    "    im3 = axes[1, 0].imshow(div_pred, cmap='RdBu_r', vmin=vmin_div, vmax=vmax_div)\n",
+    "    axes[1, 0].set_title('🌀 Predicted Divergence', fontweight='bold')\n",
+    "    plt.colorbar(im3, ax=axes[1, 0])\n",
+    "    \n",
+    "    im4 = axes[1, 1].imshow(div_hr, cmap='RdBu_r', vmin=vmin_div, vmax=vmax_div)\n",
+    "    axes[1, 1].set_title('🌀 GT Divergence', fontweight='bold')\n",
+    "    plt.colorbar(im4, ax=axes[1, 1])\n",
+    "    \n",
+    "    div_error = np.abs(div_pred - div_hr)\n",
+    "    im5 = axes[1, 2].imshow(div_error, cmap='Reds')\n",
+    "    axes[1, 2].set_title(f'Divergence Error (MAE: {div_error.mean():.6f})', fontweight='bold')\n",
+    "    plt.colorbar(im5, ax=axes[1, 2])\n",
+    "    \n",
+    "    # Row 3: Vorticity\n",
+    "    vmin_vort = min(vort_pred.min(), vort_hr.min())\n",
+    "    vmax_vort = max(vort_pred.max(), vort_hr.max())\n",
+    "    \n",
+    "    im6 = axes[2, 0].imshow(vort_pred, cmap='RdBu_r', vmin=vmin_vort, vmax=vmax_vort)\n",
+    "    axes[2, 0].set_title('🌊 Predicted Vorticity', fontweight='bold')\n",
+    "    plt.colorbar(im6, ax=axes[2, 0])\n",
+    "    \n",
+    "    im7 = axes[2, 1].imshow(vort_hr, cmap='RdBu_r', vmin=vmin_vort, vmax=vmax_vort)\n",
+    "    axes[2, 1].set_title('🌊 GT Vorticity', fontweight='bold')\n",
+    "    plt.colorbar(im7, ax=axes[2, 1])\n",
+    "    \n",
+    "    vort_error = np.abs(vort_pred - vort_hr)\n",
+    "    im8 = axes[2, 2].imshow(vort_error, cmap='Reds')\n",
+    "    axes[2, 2].set_title(f'Vorticity Error (MAE: {vort_error.mean():.6f})', fontweight='bold')\n",
+    "    plt.colorbar(im8, ax=axes[2, 2])\n",
+    "    \n",
+    "    for ax in axes.flat:\n",
+    "        ax.axis('off')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"{OUTPUT_DIR}/flow_physics_sample_{sample_idx}.png\", dpi=150, bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "\n",
+    "# Visualize a few samples\n",
+    "for i in [0, 1, 2]:\n",
+    "    print(f\"\\n📊 Visualizing sample {i}...\")\n",
+    "    visualize_flow_physics(model, dataset, sample_idx=i)"
+   ]
   }
  ],
  "metadata": {
